2004-02-14  Martin Blom  <martin@blom.org>

	* ahi.device: Applied a new batch of AmigaOS 4.x pathches from
	Davy. Thanks!

2004-02-09  Martin Blom  <martin@blom.org>

	* Released filesave.audio 5.5.

	* filesave.audio: Applied AOS4 patches from Davy Wentzler.

2004-02-04  Martin Blom  <martin@blom.org>

	* Released aros.audio 5.1.

	* aros.audio: Added "100 Hz" patches from Georg Steger.

2004-01-31  Martin Blom  <martin@blom.org>

	* aros.audio: Minor OSS tweaks.

2004-01-25  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.16.

	* emu10kx.audio: Applied AmigaOS 4 patches (with minor
	modifications) from Davy Wentzler.

	* ahi.device: Removed gasp dependency. gasp is no longer required
	for building AHI.

	* Drivers: Applied patches to make mode file generation work
	without using (the now obsolete tool) gasp. [Fabio Alemagna]

2004-01-18  Martin Blom  <martin@blom.org>

	* Drivers: Removed faulty alignment at the end of the mode files.

	* Device/audioctrl.c (_AHI_AllocAudioA): Changed 'case NULL' to
	'case 0'.

2004-01-17  Martin Blom  <martin@blom.org>

	* The top Makefile called 'make' directly and didn't use
	$(MAKE). Fixed.

2003-12-22  Martin Blom  <martin@blom.org>

	* Released aros.audio 5.0.

	* Added an AROS driver based on oss.library.

2003-11-28  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.15.

	* Clear DMA buffers when they are allocated, in case they
	are accidentally played before filled (GREX problem??)

	* emu10kx.audio: Detect GREX at loading time, not on every
	interrupt.

2003-11-24  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.14.

	* emu10kx.audio: Added GREX support (apparently, it has no bus
	snooping)

2003-11-23  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.11, 5.12 and 5.13.

	* emu10kx.audio: Resynced with the latest Linux drivers in order
	to make it work on Audigy cards.

2003-10-31  Martin Blom  <martin@blom.org>

 	* Released emu10kx.audio 5.10.
